# pocketfft

./: .gitlab-ci.yml  LICENSE.md  Makefile.am  README.md  TESTING  c_utils.c  c_utils.h  configure.ac  ffttest.c  pocketfft.c  pocketfft.cc  pocketfft.h  pocketfft.inc  pocketfft.inc.h  pocketfft_demo.cc  pocketfft_hdronly.h  runtest.sh  trig_utils.c  trig_utils.h
pocketfft/: pocketfft.c  pocketfft.h
